lib/rl_bindings.h

void DrawRectangleLinesEx_(Rectangle *a, float b, Color *c);
void DrawRectangleRounded_(Rectangle *a, float b, int c, Color *d);
void DrawRectangleRoundedLines_(Rectangle *a, float b, int c, float d, Color *e);
void DrawTriangle_(Vector2 *a, Vector2 *b, Vector2 *c, Color *d);
void DrawTriangleLines_(Vector2 *a, Vector2 *b, Vector2 *c, Color *d);
void DrawTriangleFan_(Vector2 *a, int b, Color *c);
void DrawTriangleStrip_(Vector2 *a, int b, Color *c);
void DrawPoly_(Vector2 *a, int b, float c, float d, Color *e);
void DrawPolyLines_(Vector2 *a, int b, float c, float d, Color *e);
void DrawPolyLinesEx_(Vector2 *a, int b, float c, float d, float e, Color *f);
int CheckCollisionRecs_(Rectangle *a, Rectangle *b);
int CheckCollisionCircles_(Vector2 *a, float b, Vector2 *c, float d);
int CheckCollisionCircleRec_(Vector2 *a, float b, Rectangle *c);
int CheckCollisionPointRec_(Vector2 *a, Rectangle *b);
int CheckCollisionPointCircle_(Vector2 *a, Vector2 *b, float c);
int CheckCollisionPointTriangle_(Vector2 *a, Vector2 *b, Vector2 *c, Vector2 *d);
int CheckCollisionLines_(Vector2 *a, Vector2 *b, Vector2 *c, Vector2 *d, Vector2 *e);
int CheckCollisionPointLine_(Vector2 *a, Vector2 *b, Vector2 *c, int d);
Rectangle *GetCollisionRec_(Rectangle *a, Rectangle *b);
Image *LoadImage_(char *a);
Image *LoadImageRaw_(char *a, int b, int c, int d, int e);
Image *LoadImageAnim_(char *a, int *b);
Image *LoadImageFromMemory_(char *a, unsigned char *b, int c);
Image *LoadImageFromTexture_(Texture *a);
Image *LoadImageFromScreen_();
bool IsImageReady_(Image *a);
void UnloadImage_(Image *a);
int ExportImage_(Image *a, char *b);
int ExportImageAsCode_(Image *a, char *b);
Image *GenImageColor_(int a, int b, Color *c);
Image *GenImageGradientV_(int a, int b, Color *c, Color *d);
Image *GenImageGradientH_(int a, int b, Color *c, Color *d);
Image *GenImageGradientRadial_(int a, int b, float c, Color *d, Color *e);
Image *GenImageChecked_(int a, int b, int c, int d, Color *e, Color *f);
Image *GenImageWhiteNoise_(int a, int b, float c);
Image *GenImagePerlinNoise_(int a, int b, int c, int d, float e);
Image *GenImageCellular_(int a, int b, int c);
Image *GenImageText_(int a, int b, char *c);
Image *ImageCopy_(Image *a);
Image *ImageFromImage_(Image *a, Rectangle *b);
Image *ImageText_(char *a, int b, Color *c);
Image *ImageTextEx_(Font *a, char *b, float c, float d, Color *e);
void ImageToPOT_(Image *a, Color *b);
void ImageCrop_(Image *a, Rectangle *b);
void ImageAlphaClear_(Image *a, Color *b, float c);
void ImageAlphaMask_(Image *a, Image *b);
void ImageResizeCanvas_(Image *a, int b, int c, int d, int e, Color *f);
void ImageColorTint_(Image *a, Color *b);
void ImageColorReplace_(Image *a, Color *b, Color *c);
Color *LoadImageColors_(Image *a);
Color *LoadImagePalette_(Image *a, int b, int *c);
Rectangle *GetImageAlphaBorder_(Image *a, float b);
Color *GetImageColor_(Image *a, int b, int c);
void ImageClearBackground_(Image *a, Color *b);
void ImageDrawPixel_(Image *a, int b, int c, Color *d);
void ImageDrawPixelV_(Image *a, Vector2 *b, Color *c);
void ImageDrawLine_(Image *a, int b, int c, int d, int e, Color *f);
void ImageDrawLineV_(Image *a, Vector2 *b, Vector2 *c, Color *d);
void ImageDrawCircle_(Image *a, int b, int c, int d, Color *e);
void ImageDrawCircleV_(Image *a, Vector2 *b, int c, Color *d);
void ImageDrawCircleLines_(Image *a, int b, int c, int d, Color *e);
void ImageDrawCircleLinesV_(Image *a, Vector2 *b, int c, Color *d);
void ImageDrawRectangle_(Image *a, int b, int c, int d, int e, Color *f);